--- a/M_user_list.html
+++ b/M_user_list.html
@@ -22,13 +22,13 @@
         <input type="button" onclick="loadData()" value="Look Up" class="tdBtn" />
     </div>
     <table class="list-style Interlaced">
-      <tr>
+      <thead>
         <th>ObjectId</th>
         <th>NickName</th>
         <th>Email</th>
         <th>Registrasion Date</th>
         <th>Operation</th>
-      </tr>
+      </thead>
       <tbody id="tbody">
 
       </tbody>
