--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 							<a href="products.html">Products</a>
 						</li>
 						<li>
-							<a href="index 3.html">G Center</a>
+							<a href="userCenter.html">G Center</a>
 						</li>
 						<li><a href="about.html">About Us</a></li>
 						<li><a href="mail.html">Mail Us</a></li>
