--- a/products.html
+++ b/products.html
@@ -100,6 +100,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<a href="products.html" class="act">Products</a>
 						</li>
 						<li>
+							<a href="index 3.html">G Center</a>
+						</li>
+						<li>
 							<a href="about.html">About Us</a>
 						</li>
 						<li>
