--- a/single.html
+++ b/single.html
@@ -6,7 +6,7 @@
 	<!-- for-mobile-apps -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="keywords" content="Electronic Store Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
+	<meta name="keywords" content="Electronic Store Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
 	SmartPhone Compatible web template, free web designs for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
 	<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 	function hideURLbar(){ window.scrollTo(0,1); } </script>
@@ -90,7 +90,7 @@
 							<script type="text/javascript">
 								$(document).ready(function () {
 									$('#horizontalTab').easyResponsiveTabs({
-										type: 'default', //Types: default, vertical, accordion           
+										type: 'default', //Types: default, vertical, accordion
 										width: 'auto', //auto or any width like 600px
 										fit: true   // 100% fit in a container
 									});
@@ -155,9 +155,7 @@
 				</div>
 			</div>
 			<div class="cart cart box_1">
-				<button class="w3view-cart" onclick="window.location.href='ShoppingCart.html'">
-					<i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
-				</button>
+						<button class="w3view-cart" onclick="window.location.href='ShoppingCart.html'"><i class="fa fa-cart-arrow-down"></i></button>
 			</div>
 		</div>
 	</div>
@@ -185,6 +183,9 @@
 							<a href="products.html" >Products</a>
 						</li>
 						<li>
+							<a href="index 3.html">G Center</a>
+						</li>
+						<li>
 							<a href="about.html">About Us</a>
 						</li>
 						<li>
@@ -204,7 +205,7 @@
 					<ul id="images_box" class="slides">
 						<!-- <li data-thumb="images/a.jpg">
 							<div class="thumb-image">
-								<img src="images/a.jpg" data-imagezoom="true" class="img-responsive" alt=""> 
+								<img src="images/a.jpg" data-imagezoom="true" class="img-responsive" alt="">
 							</div>
 						</li>
 						<li data-thumb="images/b.jpg">
@@ -279,7 +280,7 @@
 						</label> -->
 					</div>
 				</div>
-				
+
 				<!-- ROM选择 -->
 				<div class="property" id="rom_property">
 					<h5 class="property_title">ROM : </h5>
@@ -444,7 +445,7 @@
 			<script type="text/javascript">
 				$(document).ready(function () {
 					$('#horizontalTab1').easyResponsiveTabs({
-						type: 'default', //Types: default, vertical, accordion           
+						type: 'default', //Types: default, vertical, accordion
 						width: 'auto', //auto or any width like 600px
 						fit: true   // 100% fit in a container
 					});
@@ -600,7 +601,7 @@
 		{{each}}
 			<li data-thumb="{{$value}}">
 				<div class="thumb-image">
-					<img src="{{$value}}" data-imagezoom="true" class="img-responsive" alt=""> 
+					<img src="{{$value}}" data-imagezoom="true" class="img-responsive" alt="">
 				</div>
 			</li>
 		{{/each}}
