--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>G36 Telephone (^_^)</title>
+<title>Electronic Store a Ecommerce Online Shopping Category Bootstrap Responsive Website Template | About :: w3layouts</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -174,6 +174,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li>
 							<a href="products.html">Products</a>
 						</li>
+						<li>
+							<a href="index 3.html">G Center</a>
+						</li>
 						<li><a href="about.html" class="act">About Us</a></li>
 						<li><a href="mail.html">Mail Us</a></li>
 					</ul>
@@ -185,7 +188,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- banner -->
 	<div class="banner banner10">
 		<div class="container">
-			<h2></h2>
+			<h2>About Us</h2>
 		</div>
 	</div>
 	<!-- //banner -->
@@ -204,19 +207,26 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
 			<div class="w3ls_about_grids">
 				<div class="col-md-6 w3ls_about_grid_left">
-					<p>We believe that technology should be accessible to everyone.</p>
+					<p>Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+						cupidatat non proident, sunt in culpa qui officia deserunt mollit
+						anim id est laborum.</p>
 					<div class="col-xs-2 w3ls_about_grid_left1">
 						<span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>
 					</div>
 					<div class="col-xs-10 w3ls_about_grid_left2">
-						<p>The most powerful technology in the world is technology that everyone, including people with disabilities, can use. To work, create, communicate, stay in shape, and be entertained.</p>
+						<p>Sunt in culpa qui officia deserunt mollit
+							anim id est laborum.Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur.</p>
 					</div>
 					<div class="clearfix"> </div>
 					<div class="col-xs-2 w3ls_about_grid_left1">
 						<span class="glyphicon glyphicon-flash" aria-hidden="true"></span>
 					</div>
 					<div class="col-xs-10 w3ls_about_grid_left2">
-						<p>So we don’t design products for some people or even most people. We design them for every single person.</p>
+						<p>Sunt in culpa qui officia deserunt mollit
+							anim id est laborum.Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur.</p>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
@@ -235,7 +245,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="wthree_team_grids">
 				<div class="col-md-3 wthree_team_grid">
 					<img src="images/t4.png" alt=" " class="img-responsive" />
-					<h4>Nanshen Zhao <span>Manager</span></h4>
+					<h4>Smith Allen <span>Manager</span></h4>
 					<div class="agileits_social_button">
 						<ul>
 							<li><a href="#" class="facebook"> </a></li>
@@ -247,7 +257,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				<div class="col-md-3 wthree_team_grid">
 					<img src="images/t5.png" alt=" " class="img-responsive" />
-					<h4>Racheal Midi <span>Designer</span></h4>
+					<h4>Laura James <span>Designer</span></h4>
 					<div class="agileits_social_button">
 						<ul>
 							<li><a href="#" class="facebook"> </a></li>
@@ -259,7 +269,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				<div class="col-md-3 wthree_team_grid">
 					<img src="images/t6.png" alt=" " class="img-responsive" />
-					<h4>Xiannv Yi <span>Director</span></h4>
+					<h4>Crisp Doe <span>Director</span></h4>
 					<div class="agileits_social_button">
 						<ul>
 							<li><a href="#" class="facebook"> </a></li>
@@ -271,7 +281,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				<div class="col-md-3 wthree_team_grid">
 					<img src="images/t7.png" alt=" " class="img-responsive" />
-					<h4>Pineapple Xiao <span>Quality Checker</span></h4>
+					<h4>Linda Rosy <span>Quality Checker</span></h4>
 					<div class="agileits_social_button">
 						<ul>
 							<li><a href="#" class="facebook"> </a></li>
@@ -282,7 +292,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 				</div>
 				<div class="clearfix"> </div>
-				<p></p>
+				<p>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis
+					voluptatibus maiores alias consequatur aut perferendis doloribus asperiores
+					repellat.</p>
 			</div>
 		</div>
 	</div>
@@ -291,7 +303,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="team-bottom">
 		<div class="container">
 			<h3>Are You Ready For Deals? Flat <span>30% Offer </span>on Mobiles</h3>
-			<p></p>
+			<p>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis
+				voluptatibus maiores alias consequatur aut perferendis doloribus asperiores
+				repellat.</p>
 			<a href="products.html">Shop Now</a>
 		</div>
 	</div>
@@ -301,7 +315,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
 			<div class="col-md-6 w3agile_newsletter_left">
 				<h3>Newsletter</h3>
-				<p>Welcome to email us.</p>
+				<p>Excepteur sint occaecat cupidatat non proident, sunt.</p>
 			</div>
 			<div class="col-md-6 w3agile_newsletter_right">
 				<form action="#" method="post">
