--- a/mail.html
+++ b/mail.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>G36 Telephone (^_^)</title>
+<title>Electronic Store a Ecommerce Online Shopping Category Bootstrap Responsive Website Template | Mail Us :: w3layouts</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -174,6 +174,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li>
 							<a href="products.html">Products</a>
 						</li>
+						<li>
+							<a href="index 3.html">G Center</a>
+						</li>
 						<li><a href="about.html">About Us</a></li>
 						<li><a href="mail.html" class="act">Mail Us</a></li>
 					</ul>
@@ -185,7 +188,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- banner -->
 	<div class="banner banner10">
 		<div class="container">
-			<h2></h2>
+			<h2>Mail Us</h2>
 		</div>
 	</div>
 	<!-- //banner -->
@@ -206,14 +209,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="agile_mail_grids">
 				<div class="col-md-5 contact-left">
 					<h4>Address</h4>
-					<p>Apple Media Helpline (408) 974–2042<p>
-<p>Apple Software Upgrade Center (888) 840–8433<p>
-						<span>Reseller Referral (Resellers, Trainers, Consultants)<p> <p>(800) 538–9696</span></p>
+					<p>est eligendi optio cumque nihil impedit quo minus id quod maxime
+						<span>26 56D Rescue,US</span></p>
 					<ul>
-						<li>Free Phone :+852 29304820</li>
-						<li>Telephone :+852 39204860</li>
-						<li>Fax :+852 4589 2456</li>
-						<li><a href="mailto:1155101162@link.cuhk.edu.hk">1155101162@link.cuhk.edu.hk</a></li>
+						<li>Free Phone :+1 078 4589 2456</li>
+						<li>Telephone :+1 078 4589 2456</li>
+						<li>Fax :+1 078 4589 2456</li>
+						<li><a href="mailto:info@example.com">info@example.com</a></li>
 					</ul>
 				</div>
 				<div class="col-md-7 contact-left">
@@ -240,7 +242,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
 			<div class="col-md-6 w3agile_newsletter_left">
 				<h3>Newsletter</h3>
-				<p>Welcome to email us.</p>
+				<p>Excepteur sint occaecat cupidatat non proident, sunt.</p>
 			</div>
 			<div class="col-md-6 w3agile_newsletter_right">
 				<form action="#" method="post">
@@ -279,8 +281,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<h3>Category</h3>
 					<ul class="info">
 						<li><a href="products.html">Mobiles</a></li>
-						<li><a href="products1.html">Accessories</a></li>
-
+						<li><a href="products1.html">Laptops</a></li>
+						<li><a href="products.html">Purifiers</a></li>
+						<li><a href="products1.html">Wearables</a></li>
+						<li><a href="products2.html">Kitchen</a></li>
 					</ul>
 				</div>
 				<div class="col-md-3 w3_footer_grid">
