--- a/lookOrder.html
+++ b/lookOrder.html
@@ -72,6 +72,9 @@
 							<a href="products.html">Products</a>
 						</li>
 						<li>
+							<a href="userCenter.html">G Center</a>
+						</li>
+						<li>
 							<a href="about.html">About Us</a>
 						</li>
 						<li>
@@ -108,6 +111,26 @@
 					<input placeholder="(+852)" id="contactPhone" type="text" name="phone-num">
 				</label>
 				<!-- <button class="btn-confirm" style="width:150px">Confirm address</button> -->
+			</div>
+		</div>
+		<div class="list-info-item">
+			<h4 class="title">Delivery</h4>
+			<div class="content pay">
+				<form action="#">
+					<label>
+						<input type="radio" value="ALIPAY" name="payment">
+						<em>FedEX</em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$10
+					</label>
+					<label>
+						<input type="radio" value="ALIPAY" name="payment">
+						<em>DHL</em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$20
+					</label>
+					<label>
+						<input type="radio" value="DELIVERY" name="payment" checked="checked">
+						<em>S.F.Express</em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$0
+					</label>
+				</form>
+
 			</div>
 		</div>
 		<div class="list-info-item">
