--- a/userCenter.html
+++ b/userCenter.html
@@ -73,7 +73,9 @@
 					<form action="#" method="post" class="last">
 						<input type="hidden" name="cmd" value="_cart" />
 						<input type="hidden" name="display" value="1" />
-						<button class="w3view-cart" type="submit" name="submit" value=""><i class="fa fa-cart-arrow-down" aria-hidden="true"></i></button>
+						<div class="cart cart box_1">
+							<button class="w3view-cart" onclick="window.location.href='ShoppingCart.html'"><i class="fa fa-cart-arrow-down" ></i></button>
+						</div>
 					</form>
 				</div>
 			</div>
@@ -100,7 +102,7 @@
 							<a href="products.html">Products</a>
 							</li>
 							<li>
-								<a href="index 3.html">G Center</a>
+								<a href="userCenter.html">G Center</a>
 							</li>
 							<li><a href="about.html">About Us</a></li>
 							<li><a href="mail.html">Mail Us</a></li>
