--- a/about.html
+++ b/about.html
@@ -175,7 +175,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<a href="products.html">Products</a>
 						</li>
 						<li>
-							<a href="index 3.html">G Center</a>
+							<a href="userCenter.html">G Center</a>
 						</li>
 						<li><a href="about.html" class="act">About Us</a></li>
 						<li><a href="mail.html">Mail Us</a></li>
