--- a/mail.html
+++ b/mail.html
@@ -169,26 +169,19 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				<div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
 					<ul class="nav navbar-nav">
-						<li><a href="index.html">Home</a></li>
+						<li><a href="index.html" class="act">Home</a></li>
 						<!-- Mega Menu -->
 						<li>
 							<a href="products.html">Products</a>
 						</li>
 						<li>
-							<a href="index 3.html">G Center</a>
+							<a href="userCenter.html">G Center</a>
 						</li>
 						<li><a href="about.html">About Us</a></li>
-						<li><a href="mail.html" class="act">Mail Us</a></li>
+						<li><a href="mail.html">Mail Us</a></li>
 					</ul>
 				</div>
 			</nav>
-		</div>
-	</div>
-	<!-- //navigation -->
-	<!-- banner -->
-	<div class="banner banner10">
-		<div class="container">
-			<h2>Mail Us</h2>
 		</div>
 	</div>
 	<!-- //banner -->
