--- a/paymentresult.html
+++ b/paymentresult.html
@@ -96,37 +96,11 @@
 					<ul class="nav navbar-nav">
 						<li><a href="index.html" class="act">Home</a></li>
 						<!-- Mega Menu -->
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Products <b class="caret"></b></a>
-							<ul class="dropdown-menu multi-column columns-3">
-								<div class="row">
-									<div class="col-sm-3">
-										<ul class="multi-column-dropdown">
-											<h6>Mobiles</h6>
-											<li><a href="products.html">Mobile Phones</a></li>
-											<li><a href="products.html">Mp3 Players <span>New</span></a></li>
-											<li><a href="products.html">Popular Models</a></li>
-											<li><a href="products.html">All Tablets<span>New</span></a></li>
-										</ul>
-									</div>
-									<div class="col-sm-3">
-										<ul class="multi-column-dropdown">
-											<h6>Accessories</h6>
-											<li><a href="products1.html">Laptop</a></li>
-											<li><a href="products1.html">Desktop</a></li>
-											<li><a href="products1.html">Wearables <span>New</span></a></li>
-											<li><a href="products1.html"><i>Summer Store</i></a></li>
-										</ul>
-									</div>
-									<div class="col-sm-4">
-										<div class="w3ls_products_pos">
-											<h4>30%<i>Off/-</i></h4>
-											<img src="images/1.jpg" alt=" " class="img-responsive" />
-										</div>
-									</div>
-									<div class="clearfix"></div>
-								</div>
-							</ul>
+						<li>
+							<a href="products.html">Products</a>
+						</li>
+						<li>
+							<a href="userCenter.html">G Center</a>
 						</li>
 						<li><a href="about.html">About Us</a></li>
 						<li><a href="mail.html">Mail Us</a></li>
@@ -134,7 +108,7 @@
 				</div>
 			</nav>
 		</div>
-	</div>
+		</div>
 	<!-- //navigation -->
 	<!-- banner -->	<!-- //banner -->
 	<!-- banner-bottom -->	<!-- //banner-bottom -
