--- a/single.html
+++ b/single.html
@@ -183,7 +183,7 @@
 							<a href="products.html" >Products</a>
 						</li>
 						<li>
-							<a href="index 3.html">G Center</a>
+							<a href="userCenter.html">G Center</a>
 						</li>
 						<li>
 							<a href="about.html">About Us</a>
