--- a/M_main.html
+++ b/M_main.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>后台管理中心起始页面</title>
+<title>G 36 Management System</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="css/adminStyle.css" rel="stylesheet" type="text/css" />
 <style>html,body{width:100%;height:100%;}</style>
@@ -33,20 +33,24 @@
    <ul>
     <li>
      <span>Unpaid Orders：</span>
-     <span>539</span>
+     <span>4</span>
     </li>
     <li>
      <span>Paid Orders：</span>
-     <span>23</span>
+     <span>3</span>
     </li>
     <li>
-     <span>Confirmed Orders：</span>
-     <span>1282</span>
+     <span>Canceled Orders：</span>
+     <span>3</span>
+    </li>
+    <li>
+     <span>Arranging Orders：</span>
+     <span>1</span>
     </li>
    </ul>
   </dd>
  </dl>
- 
+
  <dl>
   <dt>Delivery Summary</dt>
   <dd>
@@ -66,8 +70,8 @@
    </ul>
   </dd>
  </dl>
- 
- 
+
+
 </div>
 </body>
 </html>
