--- a/about.html
+++ b/about.html
@@ -238,7 +238,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="wthree_team_grids">
 				<div class="col-md-3 wthree_team_grid">
 					<img src="images/t4.png" alt=" " class="img-responsive" />
-					<h4>Smith Allen <span>Manager</span></h4>
+					<h4>Nanshen Zhao <span>Manager</span></h4>
 					<div class="agileits_social_button">
 						<ul>
 							<li><a href="#" class="facebook"> </a></li>
@@ -250,7 +250,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				<div class="col-md-3 wthree_team_grid">
 					<img src="images/t5.png" alt=" " class="img-responsive" />
-					<h4>Laura James <span>Designer</span></h4>
+					<h4>Racheal Midi <span>Designer</span></h4>
 					<div class="agileits_social_button">
 						<ul>
 							<li><a href="#" class="facebook"> </a></li>
@@ -262,7 +262,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				<div class="col-md-3 wthree_team_grid">
 					<img src="images/t6.png" alt=" " class="img-responsive" />
-					<h4>Crisp Doe <span>Director</span></h4>
+					<h4>Xiannv Yi <span>Director</span></h4>
 					<div class="agileits_social_button">
 						<ul>
 							<li><a href="#" class="facebook"> </a></li>
@@ -274,7 +274,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				<div class="col-md-3 wthree_team_grid">
 					<img src="images/t7.png" alt=" " class="img-responsive" />
-					<h4>Linda Rosy <span>Quality Checker</span></h4>
+					<h4>Pineapple Xiao <span>Quality Checker</span></h4>
 					<div class="agileits_social_button">
 						<ul>
 							<li><a href="#" class="facebook"> </a></li>
