--- a/userCenter.html
+++ b/userCenter.html
@@ -184,7 +184,7 @@
 				<a href="#">
 					<img src="images/66f625e1ecfd7ad8244efabaa744aa73.jpeg" />
 				</a>
-				<em>Good afternoon
+				<em font style="font-size:10px">Good afternoon
 					<font></font>
 				</em>
 			</div>
